application/aws/base/9-route.yaml
---
apiVersion: ec2.aws.upbound.io/v1beta1
kind: Route
metadata:
  name: route-private
  annotations:
    argocd.argoproj.io/sync-wave: "9"

spec:
  providerConfigRef:
    name: aws-provider  # This line points to your specific ProviderConfig
  forProvider:
    destinationCidrBlock: 0.0.0.0/0
    natGatewayIdRef:
      name: natgw
    region: us-east-1
    routeTableIdRef:
      name: routetable-private
---
apiVersion: ec2.aws.upbound.io/v1beta1
kind: Route
metadata:
  name: route-public
  annotations:
    argocd.argoproj.io/sync-wave: "9"

spec:
  providerConfigRef:
    name: aws-provider  # This line points to your specific ProviderConfig
  forProvider:
    destinationCidrBlock: 0.0.0.0/0
    gatewayIdRef:
      name: igw
    region: us-east-1
    routeTableIdRef:
      name: routetable-public
